# 667-utility

./: LICENSE  README.md  debug_winget_search.py  main.py  pyproject.toml  requirements.txt
assets/bat/: Lower_Input_Delay.bat
assets/regs/: CPU Optimization.reg  CPU Performance Boost.reg  Decrease Delay.reg  Disable CPU Energy Estimation.reg  Disable CPU Energy Logging.reg  Disable FSO & Game Bar.reg  Disable Power Throttling.reg  Fix Lag & Stutters.reg  Game Optimization.reg  Smooth.reg  Wake up CPU Cores.reg
core/: installer.py  optimizations.py  search.py  setup.py  uninstaller.py
src/: apps.json  dev.py  programs.py
src/ui/: app.py  main_window.py  process.py  rain.py  style.py  theme.py
src/ui/views/: dashboard.py  installer.py  modern_button.py  optimizer.py  optimizer_card.py  uninstaller.py
