[project]
name = "installer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psutil>=7.2.2",
    "pyside6==6.11.1",
    "pyside6-addons==6.11.1",
    "pyside6-essentials==6.11.1",
    "ruff==0.15.17",
    "shiboken6==6.11.1",
]
